youtube/Terraform/web_AWS_server.tf
//provider "aws" {
//  region = "ru-central-1"
//}

resource "aws_instance" "my_webserver" {
  ami = "ami-03a71cec707bfc3d7"
  instance_type = "t3.micro"
  vpc_security_group_ids = [aws_security_group.my_webserver-sec_group.id]
  user_data = <<EOF
#!/bin/bash
yum -y update
yum -y install httpd
myip=`curl http://169.254.169.254/latest/meta-data/local-ipv4`
echo "<h2>WebServer with IP: $myip</h2>Build by Terraform!" > /var/www/html/index.html
sudo service httpd start
chkconfig httpd on
EOF
  tags = {
    name = "My WebServer"
    Owner = "Me"
    Project = "Terraform Lesson 8"
  }
}

resource "aws_security_group" "my_webserver-sec_group" {
  name = "Web server security group"
  description = "My security group"

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
